<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_one"
    android:overScrollMode="never"
    android:fadingEdge="none">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:paddingBottom="@dimen/footer_height">
       <LinearLayout
          android:id="@+id/ll_element_list"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
         android:orientation="vertical">
        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/defects_instruction_text"
          android:textColor="@color/black_shade_three"
          android:textSize="@dimen/text_size_10sp"
          android:layout_gravity="center_horizontal"
          android:gravity="center_horizontal"
          android:layout_margin="@dimen/margin_16"/>
        <FrameLayout
          android:id="@+id/frameLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rv_defects_list"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:focusableInTouchMode="true"
          android:descendantFocusability="beforeDescendants"
          android:focusable="true">
        </androidx.recyclerview.widget.RecyclerView>
        <View
          android:id="@+id/overlay"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:clickable="true"
          android:visibility="gone" />
        </FrameLayout>
       </LinearLayout>
       <RelativeLayout
          android:id="@+id/rl_arrow"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
       <ImageView
          android:id="@+id/iv_previous_page"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentStart="true"
          android:visibility="gone"
          android:src="@drawable/go_back_arrow"
          android:layout_marginTop="@dimen/margin_16"
          android:layout_marginBottom="@dimen/margin_8"
          android:layout_marginStart="@dimen/margin_24"/>
       <TextView
          android:id="@+id/tv_previous_page"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentStart="true"
          android:visibility="gone"
          android:layout_below="@+id/iv_previous_page"
          android:layout_marginStart="@dimen/margin_24"
          android:text="@string/previous_page"
          android:textSize="@dimen/text_size_14sp"
          android:textColor="@color/black_shade_three"/>
       <ImageView
          android:id="@+id/iv_next_page"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:layout_marginTop="@dimen/margin_16"
          android:layout_marginBottom="@dimen/margin_8"
          android:layout_marginEnd="@dimen/margin_24"/>
       <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:layout_below="@+id/iv_next_page"
          android:layout_marginEnd="@dimen/margin_24"
          android:text="@string/next_page"
          android:textSize="@dimen/text_size_14sp"
          android:textColor="@color/black_shade_three"/>
       </RelativeLayout>
   </LinearLayout>
</androidx.core.widget.NestedScrollView>
