<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
   <Switch
       android:id="@+id/switch_trailer"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:checked="false"
       android:text="Trailer connected ?"
       android:textStyle="bold"
       android:textColor="@color/black_shade_three"
       android:theme="@style/Switch"
       android:padding="@dimen/margin_16"
       android:switchMinWidth="62dp"
       android:background="@color/trailer_connected_bg"/>
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:overScrollMode="never"
       android:fadingEdge="none">
   <LinearLayout
       android:id="@+id/ll_trailer_defects"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:background="@color/background_color_one"
       android:visibility="visible">
      <LinearLayout
         android:id="@+id/ll_nfc_trailer"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/nfc_tag_text_trailer"
          android:layout_gravity="center"
          android:gravity="center"
          android:textSize="@dimen/extra_small_text_size"
          android:textColor="@color/black_shade_three"
          android:layout_margin="@dimen/margin_16"/>
      <LinearLayout
          android:id="@+id/ll_nfc_trailer_near"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:background="@drawable/nfc_bg_focus"
          android:layout_marginStart="@dimen/margin_16"
          android:layout_marginEnd="@dimen/margin_16">
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingTop="@dimen/margin_12"
             android:paddingBottom="@dimen/margin_12"
             android:paddingStart="@dimen/margin_16"
             android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/near_tag"
                android:textSize="@dimen/text_size_16sp"
                android:textColor="@color/black_shade_three"/>
            <TextView
                android:id="@+id/tv_near_tag_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:hint="@string/tag_hint"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:background="@android:color/transparent"
                android:textColorHint="@color/black_shade_six"
                android:textSize="@dimen/text_size_16sp" />
         </LinearLayout>
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:background="@color/grey_shade_one">
         </View>
         <ImageView
             android:id="@+id/iv_nfcTag_near_trailer"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:src="@drawable/nfc"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"/>
      </LinearLayout>
      <LinearLayout
          android:id="@+id/ll_nfc_trailer_off"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:background="@drawable/nfc_bg_focus"
          android:layout_margin="@dimen/margin_16">
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingTop="@dimen/margin_12"
             android:paddingBottom="@dimen/margin_12"
             android:paddingStart="@dimen/margin_16"
             android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off_tag"
                android:textSize="@dimen/text_size_16sp"
                android:textColor="@color/black_shade_three"/>
            <TextView
                android:id="@+id/tv_off_tag_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:hint="@string/tag_hint"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:background="@android:color/transparent"
                android:textColorHint="@color/black_shade_six"
                android:textSize="@dimen/text_size_16sp" />
         </LinearLayout>
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:background="@color/grey_shade_one">
         </View>
         <ImageView
             android:id="@+id/iv_nfcTag_off_trailer"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:src="@drawable/nfc"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"/>
      </LinearLayout>
      </LinearLayout>
       <include layout="@layout/inspection_defects_layout" />
   </LinearLayout>
   </ScrollView>
</LinearLayout>
